portfolio/src/main/webapp/style.css
#content {
    margin-left: auto;
    margin-right: auto;
    width: 650px;
    display: flex;
    align-items: center;
    justify-content: center;
    color: #e9f5ff;
    flex-direction: column;
    font-family: Verdena, Geneva, sans-serif; 
}

#greeting-container {
    margin-top: 20px;
}

.picture{
    width: 20em;
    height: 10%;
}

.column {
    float: left;
    width: 33.33%;
    padding: 51px;
}

.row::after {
    content: "";
    clear: both;
    display: table;
}

* {
    -webkit-box-sizing: border-box;
    -moz-box-sizing: border-box;
    box-sizing: border-box;
}

#header { 
    display: flex;
    align-items: center;
    justify-content: center;
    flex-direction: column;
    text-align: center; 
    padding: 50px; 
    margin: 50px 50px 20px 50px;
    background: #58585;  
}

p{
    font-size: 1.0em;
}

#buttonline{
    flex-direction: row;
}


button, input[type='submit'] {
    outline: none;
    padding: 10px 10px;
    font-size: 1.5em;
    color: #c87e1e;
    font-weight: bold;
    background: #d3da82;
    transition: all 0.2s ease-in-out;
}

.list-group-item{
    color:black;
}

input{
    width: 100%;
    padding: 12px 20px;
    margin: 8px 0;
    display: inline-block;
    border: 1px solid #ccc;
    border-radius: 4px;
    box-sizing: border-box;
}

.comments{
    border-radius: 5px;
    background-color: #f2f2f2;
    padding: 20px;
}

.description {
    display: flex;
    align-items: center;
    justify-content: center;
    flex-direction: column;
    text-align: center; 
    padding: 50px; 
    margin-top: 0;
    margin: 0px 50px 50px 50px;
    background: #908879;  
}

